fix modal view on mobile

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -11,3 +11,15 @@
   margin-bottom: 10px;
   background-color: #f8f9fa;
 }
+
+.v--modal-box {
+  margin-top: 10px;
+  max-width: 600px !important;
+  width: 100% !important;
+
+  padding: 25px !important;
+
+  left: 0 !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+}
